--- a/app/src/main/res/layout/activity_signup_main.xml
+++ b/app/src/main/res/layout/activity_signup_main.xml
@@ -90,7 +90,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_button"
-        android:text="Login"
+        android:text="Sign Up"
         android:textColor="#ffffff"
         android:textStyle="bold"
         android:padding="12dp"
