--- a/Android/app/src/main/res/layout/activity_order_main.xml
+++ b/Android/app/src/main/res/layout/activity_order_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="StaffScreen.order_MainActivity"
+    tools:context="StaffScreen.Order.order_MainActivity"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@android:color/white">
@@ -15,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:fitsSystemWindows="true">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,11 +35,16 @@
 
 
     <!-- Danh sách món ăn -->
-    <androidx.recyclerview.widget.RecyclerView
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        android:fillViewport="true">
+    <ListView
         android:id="@+id/lsOrderView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"/>
+    </ScrollView>
 
     <!-- Thanh điều hướng dưới -->
     <RelativeLayout
