--- a/Android/app/src/main/res/layout/activity_menu_main.xml
+++ b/Android/app/src/main/res/layout/activity_menu_main.xml
@@ -40,18 +40,18 @@
                 android:layout_marginEnd="16dp"/>
 
             <!-- Số lượng thông báo (Badge) -->
-            <TextView
-                android:id="@+id/cartBadge"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_notification"
-                android:text="1"
-                android:textSize="12sp"
-                android:textColor="@android:color/white"
-                android:gravity="center"
-                android:layout_gravity="top|end"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="4dp"/>
+<!--            <TextView-->
+<!--                android:id="@+id/cartBadge"-->
+<!--                android:layout_width="20dp"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:background="@drawable/ic_notification"-->
+<!--                android:text="1"-->
+<!--                android:textSize="12sp"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:gravity="center"-->
+<!--                android:layout_gravity="top|end"-->
+<!--                android:layout_marginEnd="8dp"-->
+<!--                android:layout_marginTop="4dp"/>-->
         </FrameLayout>
 
     </LinearLayout>
