--- a/Android/app/src/main/res/layout/activity_detail_main.xml
+++ b/Android/app/src/main/res/layout/activity_detail_main.xml
@@ -27,7 +27,7 @@
                 android:layout_marginBottom="16dp"
                 android:gravity="left"/>
             <ImageView
-                android:id="@+id/addOrderButton"
+                android:id="@+id/addOrderButtonDetail"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_add"/>
@@ -40,7 +40,7 @@
         android:layout_height="500dp"
         android:fillViewport="true">
         <ListView
-            android:id="@+id/lsOrderView"
+            android:id="@+id/lsOrderViewDetail"
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:layout_marginTop="16dp"
@@ -68,7 +68,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvTotal"
+                android:id="@+id/tvTotalDetail"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:layout_weight="1"
