--- a/Android/app/src/main/res/layout/bottom_navigation.xml
+++ b/Android/app/src/main/res/layout/bottom_navigation.xml
@@ -41,11 +41,11 @@
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/schedule_icon"/>
+            android:src="@drawable/static_icon"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Schedule"
+            android:text="Statistic"
             android:textSize="12sp"/>
     </LinearLayout>
 
