--- a/Android/app/src/main/res/layout/item_deltail.xml
+++ b/Android/app/src/main/res/layout/item_deltail.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:padding="8dp">
     <ImageView
-        android:id="@+id/imgFood"
+        android:id="@+id/imgFoodDetail"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/food"
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvFoodName"
+            android:id="@+id/tvFoodNameDetail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sinh tố bơ"
@@ -31,14 +31,28 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical">
+            <Button
+                android:id="@+id/btnDecreaseDetail"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:backgroundTint="#00000000"
+                android:text="−"
+                android:textColor="@color/black"/>
             <TextView
-                android:id="@+id/tvQuantity"
+                android:id="@+id/tvQuantityDetail"
                 android:layout_width="32dp"
                 android:layout_height="wrap_content"
                 android:text="2"
                 android:textSize="16sp"
                 android:gravity="center"
                 android:padding="4dp"/>
+            <Button
+                android:id="@+id/btnIncreaseDetail"
+                android:layout_width="40dp"
+                android:layout_height="45dp"
+                android:backgroundTint="#00000000"
+                android:text="+"
+                android:textColor="@color/black"/>
         </LinearLayout>
     </LinearLayout>
 
