--- a/Android/app/src/main/res/layout/activity_detail_main.xml
+++ b/Android/app/src/main/res/layout/activity_detail_main.xml
@@ -76,13 +76,13 @@
                 android:text="Total: 100.000" />
 
             <Button
-                android:id="@+id/btnCash"
+                android:id="@+id/btnCashDetail"
                 android:layout_width="130dp"
                 android:layout_height="60dp"
                 android:text="Pay in Cash" />
 
             <Button
-                android:id="@+id/btnBanking"
+                android:id="@+id/btnBankingDetail"
                 android:layout_width="120dp"
                 android:layout_height="60dp"
                 android:layout_marginLeft="10dp"
