--- a/Android/app/src/main/res/layout/activity_detail_main.xml
+++ b/Android/app/src/main/res/layout/activity_detail_main.xml
@@ -10,46 +10,37 @@
     android:padding="16dp"
     android:background="@android:color/white">
 
-        <!-- Tiêu đề -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:fitsSystemWindows="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Detail"
-                android:textSize="24sp"
-                android:textColor="#597BF7"
-                android:textStyle="bold"
-                android:layout_marginBottom="16dp"
-                android:gravity="left"/>
-            <ImageView
-                android:id="@+id/addOrderButtonDetail"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_add"/>
-        </LinearLayout>
-
-
-        <!-- Danh sách món ăn -->
-    <ScrollView
+    <!-- Tiêu đề -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:fillViewport="true">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:fitsSystemWindows="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Detail"
+            android:textSize="24sp"
+            android:textColor="#597BF7"
+            android:textStyle="bold"
+            android:layout_marginBottom="16dp"
+            android:gravity="left"/>
+        <ImageView
+            android:id="@+id/addOrderButtonDetail"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_add"/>
+    </LinearLayout>
+
         <ListView
             android:id="@+id/lsOrderViewDetail"
             android:layout_width="match_parent"
-            android:layout_height="450dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="100dp"/>
-    </ScrollView>
-        <!-- Thanh điều hướng dưới -->
+            android:layout_height="500dp"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <!-- Include layout -->
         <include
