--- a/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/booking/bookingManage.cshtml
+++ b/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/booking/bookingManage.cshtml
@@ -17,12 +17,12 @@
                            aria-label="Search" aria-describedby="basic-addon2" name="search"
                            style="width: 100%; padding: 5px;" min="1">
                 </div>
-                <div class="input-group" style="flex-grow: 1; max-width: 200px; margin-right: 20px;">
+                @* <div class="input-group" style="flex-grow: 1; max-width: 200px; margin-right: 20px;">
                     <input type="datetime" class="form-control bg-light border-0 small"
                            value="@Model.Date"
                            aria-label="Search" aria-describedby="basic-addon2" name="date"
                            style="width: 100%; padding: 5px;">
-                </div>
+                </div> *@
                 <button type="submit" class="btn btn-primary" style="padding: 5px 15px;">Filter</button>
             </form>
         </div>
