--- a/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/Index.cshtml
+++ b/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/Index.cshtml
@@ -49,7 +49,7 @@
                         <tr>
                             <td style="padding: 10px;">@i.Id</td>
                             <td style="padding: 10px;">@i.Name</td>
-                            <td style="width:50px;"><img style="width:50px; object-fit:cover" src="@i.Img" /></td>
+                            <td style="width:50px;"><img style="width:50px; object-fit:cover" src="~/assets/img/@(i.Img).jpg" alt="~/assets/img/@(i.Img).png" /></td>
                             <td style="padding: 10px;">@i.QuantitySold</td>
                             <td style="padding: 10px;">@i.Instock</td>
                             <td style="padding: 10px;">@i.TotalBills</td>
