--- a/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/menu/MenuManage.cshtml
+++ b/API/HE170242_HaiTD_WebAPI/RestaurantBooking/Pages/Admin/menu/MenuManage.cshtml
@@ -6,7 +6,7 @@
 <div style="display: flex; justify-content: space-between; align-items: center; width: 100%; margin-bottom:10px;">
     <a class="btn btn-primary addButton" id="addButton">Add</a>
     <div style="display: flex;">
-        <a class="btn btn-primary" style="margin-right:10px;" asp-page-handler="DownloadExcel">Download template</a>
+        @* <a class="btn btn-primary" style="margin-right:10px;" asp-page-handler="DownloadExcel">Download template</a> *@
         <form style="padding-top:5px" method="post" enctype="multipart/form-data" asp-page-handler="UploadExcel">
             <input type="file" accept=".xlsx" required name="excel" />
             <button>Add</button>
